# emhmm-toolbox_v3

./: .gitignore  pyproject.toml
emhmm_toolbox_v3/demo/: demo_faces.py
emhmm_toolbox_v3/src/gmm/: gmm_learn.py
emhmm_toolbox_v3/src/hmm/: vbhmm_init.py  vbhmm_learn.py
emhmm_toolbox_v3/utils/: read_xls_fixations.py
