[tool.poetry]
name = "emhmm-toolbox-v3"
version = "0.1.0"
description = ""
authors = ["marcoincerti <marco.incerti@studenti.unimi.it>"]
readme = "README.md"
packages = [{include = "emhmm_toolbox_v3"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.24.3"
pandas = "^2.0.2"
xlrd = "^2.0.1"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
tensorflow-probability = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
